@@ -1284,8 +1284,10 @@
 	'S_TRENDS_STORED'=>			'Trends stored',
 	'S_NUMBER_OF_TRIGGERS'=>		'Number of triggers (enabled/disabled)[true/unknown/false]',
 	'S_NUMBER_OF_TRIGGERS_SHORT'=>		'Triggers (e/d)[t/u/f]',
+	'S_NUMBER_OF_TRIGGERS_TOOLTIP'=>		'Only triggers assigned to enabled hosts and depending on enabled items are counted',
 	'S_NUMBER_OF_ITEMS'=>			'Number of items (monitored/disabled/not supported)',
 	'S_NUMBER_OF_ITEMS_SHORT'=>		'Items (m/d/n)[t]',
+	'S_NUMBER_OF_ITEMS_TOOLTIP'=>	'Only items assigned to enabled hosts are counted',
 	'S_NUMBER_OF_USERS'=>			'Number of users (online)',
 	'S_NUMBER_OF_USERS_SHORT'=>		'Users (online)',
 	'S_NUMBER_OF_HOSTS'=>			'Number of hosts (monitored/not monitored/templates)',
